Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16480

Lustre fiemap does not properly handle fm_extent_count=0

XMLWordPrintable

    • 3
    • 9223372036854775807

      "fm_extent_count specifies the number of elements in the fm_extents[] array that can be used to return extents. If fm_extent_count is zero, then the fm_extents[] array is ignored (no extents will be returned), and the fm_mapped_extents count will hold the number of extents needed in fm_extents[] to hold the file’s current mapping."

       

      https://www.kernel.org/doc/html/latest/filesystems/fiemap.html

       

      In practice, depending on the state of the kernel thread stack, EINVAL can be returned to userspace even for simple single stripe files.

       

      Details will follow.

            panda Andrew Perepechko
            panda Andrew Perepechko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: